# nuts-sample-tms

./: .env.example  .gitignore  README.md  app.py  config.py  ptm_client.py  pyproject.toml  requirements.txt  run.sh
docs/: oauth2_integration_guide.md  partner_onboarding.md
templates/: base.html  home.html  new_tournament.html  tournaments.html
tests/: test_ptm_client.py
