[project]
name = "nuts-sample-tms"
version = "0.1.0"
description = "NUTS Sample TMS — PTM OAuth2 reference client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

# This is a runnable app, not an installable package — uv just manages the
# environment, so there is no [build-system] section.
[tool.uv]
package = false
